Services/ServiceA/Yaml/virtual-service-httpintercept.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stub-service-route
spec:
  hosts:
  - example.com
  http:
  - route:
    - destination:
        host: serviceb.sample-namespace.svc.cluster.local  # Replace with the actual Kubernetes Service name of the Stub Service
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: example-com-entry
spec:
  hosts:
  - example.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
